--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <html>
 	<head>
 		<meta name="author" content="Sungsam Gong">
-		<meta name="description" content="sung.bio.cc" /> 
+		<meta name="description" content="sung.github.io" /> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>hello</title>
 	</head>
 	<body bgcolor=#ffffff>
 		<h2>I want to believe</h2>
 		<img src="./TRUTH.gif">
+        <a link="./RNA-Seq_file_format_praticals_2019/RNA-Seq_file_format_praticals_2019.html">RNA-Seq file formats practical</a>
 	</body>
 	<!-- google analytics -->
 </html>
