--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body bgcolor=#ffffff>
 		<h2>I want to believe</h2>
 		<img src="./TRUTH.gif">
-        <li><p><a href="RNA-Seq_file_format_practicals_2019/RNA-Seq_file_format_practicals_2019.nb.html">RNA-Seq file formts practical</a></p></li>
+        <li><p><a href="RNA-Seq_file_format_practicals_2019/RNA-Seq_file_format_practicals_2019.nb.html">RNA-Seq file formats practical</a></p></li>
 	</body>
 	<!-- google analytics -->
 </html>
