--- a/cv/index.html
+++ b/cv/index.html
@@ -4,13 +4,13 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"><title>CV - Sung Sam Gong, PhD</title><meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta property="og:title" content="CV" />
-<meta property="og:description" content="Education  Oct, 2006 – Aug, 2010: PhD, Department of Biochemistry, University of Cambridge, Cambridge, UK (supervisor: Professor Sir Tom Blundell) Thesis title: Structural and Functional Analysis of Single Amino Acid Replacement in Proteins: Insights from Protein Evolution into the Disease Aetiology Sep, 2003 – Aug, 2005: MSc, KAIST (Korea Advanced Institute of Science and Technology), Department of BioSystems, Daejeon, Korea (supervisor: Dr. Jong Bhak) Thesis title: PSIbase and interpare : systems for studying protein structural interactomics Mar, 2002 – Aug, 2003: BSc, Department of Computer Science, Korea University, Seoul, Korea." />
+<meta property="og:description" content="Education Oct, 2006 – Aug, 2010: PhD, Department of Biochemistry, University of Cambridge, Cambridge, UK (supervisor: Professor Sir Tom Blundell) Thesis title: Structural and Functional Analysis of Single Amino Acid Replacement in Proteins: Insights from Protein Evolution into the Disease Aetiology [download] Sep, 2003 – Aug, 2005: MSc, Department of BioSystems, KAIST (Korea Advanced Institute of Science and Technology), Daejeon, Korea (supervisor: Dr. Jong Bhak &amp; Dr. Kwang-Hyung Lee) Thesis title: PSIbase and interpare : systems for studying protein structural interactomics Mar, 2002 – Aug, 2003: BSc, Department of Computer Science, Korea University, Seoul, Korea." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/cv/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="CV"/>
-<meta name="twitter:description" content="Education  Oct, 2006 – Aug, 2010: PhD, Department of Biochemistry, University of Cambridge, Cambridge, UK (supervisor: Professor Sir Tom Blundell) Thesis title: Structural and Functional Analysis of Single Amino Acid Replacement in Proteins: Insights from Protein Evolution into the Disease Aetiology Sep, 2003 – Aug, 2005: MSc, KAIST (Korea Advanced Institute of Science and Technology), Department of BioSystems, Daejeon, Korea (supervisor: Dr. Jong Bhak) Thesis title: PSIbase and interpare : systems for studying protein structural interactomics Mar, 2002 – Aug, 2003: BSc, Department of Computer Science, Korea University, Seoul, Korea."/>
+<meta name="twitter:description" content="Education Oct, 2006 – Aug, 2010: PhD, Department of Biochemistry, University of Cambridge, Cambridge, UK (supervisor: Professor Sir Tom Blundell) Thesis title: Structural and Functional Analysis of Single Amino Acid Replacement in Proteins: Insights from Protein Evolution into the Disease Aetiology [download] Sep, 2003 – Aug, 2005: MSc, Department of BioSystems, KAIST (Korea Advanced Institute of Science and Technology), Daejeon, Korea (supervisor: Dr. Jong Bhak &amp; Dr. Kwang-Hyung Lee) Thesis title: PSIbase and interpare : systems for studying protein structural interactomics Mar, 2002 – Aug, 2003: BSc, Department of Computer Science, Korea University, Seoul, Korea."/>
 <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,300italic,400italic|Raleway:500,100,300" rel="stylesheet">
 
 	<link rel="stylesheet" type="text/css" media="screen" href="/css/normalize.css" />
@@ -54,14 +54,19 @@
 		<div class="markdown">
 			
 
-<h2 id="education">Education</h2>
 
-<ol>
-<li>Oct, 2006 – Aug, 2010: PhD, Department of Biochemistry, University of Cambridge, Cambridge, UK (supervisor: Professor Sir Tom Blundell) Thesis title: Structural and Functional Analysis of Single Amino Acid Replacement in Proteins: Insights from Protein Evolution into the Disease Aetiology</li>
-<li>Sep, 2003 – Aug, 2005: MSc, KAIST (Korea Advanced Institute of Science and Technology), Department of BioSystems, Daejeon, Korea (supervisor: Dr. Jong Bhak) Thesis title: PSIbase and interpare : systems for studying protein structural interactomics</li>
-<li>Mar, 2002 – Aug, 2003: BSc, Department of Computer Science, Korea University, Seoul, Korea.</li>
-<li>Mar, 1995 – Feb, 2002: BSc, Department of Biology, Korea University, Seoul, Korea</li>
+<div id="education" class="section level2">
+<h2>Education</h2>
+<ol style="list-style-type: decimal">
+<li>Oct, 2006 – Aug, 2010: PhD, <a href="https://www.bioc.cam.ac.uk/">Department of Biochemistry</a>, University of Cambridge, Cambridge, UK (supervisor: <a href="https://en.wikipedia.org/wiki/Tom_Blundell">Professor Sir Tom Blundell</a>) Thesis title: <a href="http://idiscover.lib.cam.ac.uk/permalink/f/t9gok8/44CAM_ALMA21430922120003606">Structural and Functional Analysis of Single Amino Acid Replacement in Proteins: Insights from Protein Evolution into the Disease Aetiology</a> [<a href="/files/phd_thesis_sung_final_2011.pdf">download</a>]</li>
+<li>Sep, 2003 – Aug, 2005: MSc, <a href="https://bioeng.kaist.ac.kr">Department of BioSystems</a>, KAIST (Korea Advanced Institute of Science and Technology), Daejeon, Korea (supervisor: Dr. Jong Bhak &amp; Dr. Kwang-Hyung Lee) Thesis title: <a href="http://koasas.kaist.ac.kr/handle/10203/27114">PSIbase and interpare : systems for studying protein structural interactomics</a></li>
+<li>Mar, 2002 – Aug, 2003: BSc, <a href="https://cs.korea.edu">Department of Computer Science</a>, Korea University, Seoul, Korea.</li>
+<li>Mar, 1995 – Feb, 2002: BSc, <a href="https://lifesci.korea.edu">Department of Biology</a>, Korea University, Seoul, Korea</li>
 </ol>
+</div>
+<div id="publications" class="section level2">
+<h2>Publications</h2>
+</div>
 
 		</div></div>
     <div class="footer wrapper">
