google analytics added

--- a/about/index.html
+++ b/about/index.html
@@ -65,9 +65,20 @@ The source code (of blogdown &amp; hugo bits) is avaible here and the static con
 		</div></div>
     <div class="footer wrapper">
 	<nav class="nav">
-        <div>&copy; <a href="https://sung.bio.cc">Sung Gong</a> 2019</div></nav>
+        <div>&copy; <a href="http://sung.bio.cc">Sung Gong</a> 2019</div></nav>
 </div>
 
+
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'UA-145279805-1', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
 <script>feather.replace()</script>
 </body>
 </html>
